# eggman

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  conanfile.txt  requirements.txt  run.py
.github/ISSUE_TEMPLATE/: 2-feature-request.md  3-question.md
.github/workflows/: build.yml
libs/egg/: CMakeLists.txt
libs/egg/src/: egg.h
libs/egg/src/core/: application.cc  application.h  entrypoint.h  keycodes.h
scripts/: run.sh
scripts/linux/: configure.sh
scripts/ubuntu/: run.sh
scripts/ubuntu-latest/: run.sh
scripts/windows/: build.sh  run.sh
scripts/windows-latest/: configure.sh  run.sh
src/: a.cc
